fix: com.example to io.dahliaos

--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = pangolin_desktop
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.pangolinDesktop
+PRODUCT_BUNDLE_IDENTIFIER = io.dahliaos.pangolinDesktop
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 io.dahliaos. All rights reserved.
